<resources>
    <string name="app_name">Cards</string>

    <string name="button_label_view_card_sets">View Card Sets</string>
    <string name="button_label_new_card_set">New Card Set</string>

    <string name="new_cards_name_label">New Cards Name:</string>
    <string name="new_cards_name_default">Enter New Name Here</string>

    <string name="button_label_cancel">Cancel</string>
    <string name="button_label_next">Next</string>

    <string name="warning_enter_not_empty_name">Enter new cards name please.</string>

    <string name="action_label_add">Add</string>
    <string name="action_label_remove">Remove</string>
    <string name="button_label_refresh">Refresh</string>

    <string name="front_side_content_label">Front side:</string>
    <string name="front_side_content_hint">Type card\'s front side content here</string>
    <string name="back_side_content_label">Back side:</string>
    <string name="back_side_content_hint">Type card\'s back side content here</string>
    <string name="alert_type_not_empty_value">Type not empty value!</string>
    <string name="action_label_done">Done</string>
    <string name="action_label_edit">Edit</string>

    <string name="alert_title_remove">Remove</string>
    <string name="alert_question_remove_card_template">Delete %d card(s)?</string>
    <string name="action_label_show_cards">Cards</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="button_label_run_card_set">Run Card Set</string>
    <string name="button_label_select_card_set">Select Card Set</string>
    <string name="stub_front_side_content">Front Side Content</string>
    <string name="stub_back_side_content">Back Side content</string>
    <string name="drawer_open">Drawer Open Description</string>
    <string name="drawer_close">Drawer Close Description</string>

    <string name="save_to_file_title">Save to file...</string>
    <string name="file_name_hint">File name</string>
    <string name="shared_preferences_name" />
    <string name="alert_couldnt_delete_system_category">Couldn\'t delete system category</string>
    <string name="alert_question_move_cards_to_unsorted">Move all underlaying cards to unsorted?</string>
    <string name="action_move_to_unsorted">Move to Unsorted</string>
    <string name="action_delete_all_underlaying_cards">Delete All</string>
    <string name="couldnt_find_unsorted_cat">Couldn\'t find unsorted category</string>

    <string name="selected_items_template">%d selected</string>
    <string name="remove_card_sets_alert_template">Remove %d card set(s)?</string>

    <string name="action_add_definition">Add Definition</string>
    <string name="action_add_foreign_word">Add Foreign Word</string>

    <string name="label_word_or_phrase">Word (or Phrase):</string>
    <string name="hint_word_or_phrase">Type foreign word or phrase here</string>
    <string name="label_transcription">Transcription:</string>
    <string name="hint_transcription">Type transcription here (optional)</string>
    <string name="label_usage_examples">Usage examples:</string>
    <string name="hint_usage_examples">Type usage examples here (optional)</string>
    <string name="label_translation">Translation:</string>
    <string name="hint_translation">Type word or phrase translation here</string>
    <string name="label_term">Term:</string>
    <string name="hint_term">Type the term here</string>
    <string name="label_definition">Definition:</string>
    <string name="hint_definition">Type the term\'s definition here</string>
    <string name="action_edit_definition">Edit Definition</string>
</resources>
